force-app/main/default/objects/sma__MAAJAXDebugLog__c/sma__MAAJAXDebugLog__c.object-meta.xml
<CustomObject>
    <label>MapAnything AJAX Resource Debug Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything AJAX Resource Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>