force-app/main/default/objects/sma__MAAJAXDebugLog__c/fields/sma__GeocodeSuccessful__c.field-meta.xml
<CustomField>
    <fullName>sma__GeocodeSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geocode Successful</label>
    <type>Checkbox</type>
</CustomField>