force-app/main/default/objects/sma__MAAJAXDebugLog__c/fields/sma__RequestParameters__c.field-meta.xml
<CustomField>
    <fullName>sma__RequestParameters__c</fullName>
    <label>Request Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>